Terminado front-end y crud completado

--- a/frontend/view/index.html
+++ b/frontend/view/index.html
@@ -4,23 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD Frontend</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <nav>
-        <img src="logocru.png" alt="CRUD System Logo" class="logo">
+        <img src="../img/logocru.png" alt="CRUD System Logo" class="logo">
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#entity1">Entidad 1</a></li>
-            <li><a href="#entity2">Entidad 2</a></li>
-            <li><a href="#entity3">Entidad 3</a></li>
-            <li><a href="#entity4">Entidad 4</a></li>
-            <li><a href="#entity5">Entidad 5</a></li>
-            <li><a href="#entity6">Entidad 6</a></li>
-            <li><a href="#entity7">Entidad 7</a></li>
-            <li><a href="#entity8">Entidad 8</a></li>
-            <li><a href="#entity9">Entidad 9</a></li>
-            <li><a href="#entity10">Entidad 10</a></li>
+            <li><a href="index.html">Usuarios</a></li>
+            <li><a href="serie_cat.html">Serie-Cat</a></li>
+            <li><a href="series.html">Series</a></li>
+            <li><a href="reseñas.html">Reseñas</a></li>
+            <li><a href="peliscat.html">Pelis-Cat</a></li>
+            <li><a href="pelis.html">Pelis</a></li>
+            <li><a href="histovi.html">Histo-visuali</a></li>
+            <li><a href="comentarios.html">Comentarios</a></li>
+            <li><a href="categorias.html">Categorias</a></li>
         </ul>
     </nav>
     
@@ -31,8 +29,8 @@
     <section id="register">
         <h2>Registrar Usuario</h2>
         <input type="text" id="name" placeholder="Nombre">
-        <input type="text" id="phone" placeholder="Teléfono">
-        <input type="text" id="address" placeholder="Dirección">
+        <input type="email" id="email" placeholder="Email">
+        <input type="password" id="password" placeholder="Contraseña">
         <button onclick="registerUser()">Registrar</button>
     </section>
     
