--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -4,7 +4,6 @@ body {
     margin: 0;
     padding: 0;
     background-color: #121212;
-    color: #ffffff;
 }
 
 /* Navegación */
@@ -17,6 +16,9 @@ nav {
 }
 .logo {
     width: 120px;
+}
+h2{
+    color: white;
 }
 nav ul {
     list-style: none;
@@ -85,6 +87,14 @@ ul li {
     padding: 10px;
     margin: 5px 0;
     border-radius: 5px;
+    color: white;
+}
+
+.col-6{
+    border: 1px solid #444;
+    text-align: center;
+}
+.tituloGet{
     color: white;
 }
 
