--- a/frontend/view/categorias.html
+++ b/frontend/view/categorias.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD Frontend</title>
+    <link rel="stylesheet" href="../css/bootstrap-5.3.3-dist/css/bootstrap.css">   
     <link rel="stylesheet" href="../css/styles.css">
     <style>
          table {
@@ -48,7 +49,7 @@
     <section id="register">
       <h2>Registrar Categorias</h2>
       <input type="text" id="nombre" placeholder="Nombre">
-      <button onclick="registerUser()">Registrar</button>
+      <button onclick="registerCate()">Registrar</button>
   </section>
   
   <section id="list">
@@ -58,7 +59,13 @@
       <input type="text" id="filter" placeholder="Filtrar por titulo" oninput="filterList()">
       <ul id="userList"></ul>
   </section>
+  <section id="list">
+    <h2>Categorias</h2>
+    <div class="categorias" id="categorias">
+        
+    </div>
     
-    <script src="script.js"></script>
+</section>
+    <script src="js/categorias.js"></script>
 </body>
 </html>
