--- a/frontend/view/series.html
+++ b/frontend/view/series.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD Frontend</title>
+    <link rel="stylesheet" href="../css/bootstrap-5.3.3-dist/css/bootstrap.css">   
     <link rel="stylesheet" href="../css/styles.css">
     <style>
          table {
@@ -47,9 +48,9 @@
     
     <section id="register">
       <h2>Registrar Serie</h2>
-      <input type="text" id="titulo" placeholder="Titutlo">
+      <input type="text" id="titulo" placeholder="Titulo">
       <input type="text" id="temporadas" placeholder="Temporadas">
-      <button onclick="registerUser()">Registrar</button>
+      <button onclick="registrarSerie()">Registrar</button>
   </section>
   
   <section id="list">
@@ -59,7 +60,12 @@
       <input type="text" id="filter" placeholder="Filtrar por titulo" oninput="filterList()">
       <ul id="userList"></ul>
   </section>
+    <section id="list">
+        <h2>Series</h2>
+        <div class="Series" id="series">
+            
+        </div>
     
-    <script src="script.js"></script>
+    <script src="js/series.js"></script>
 </body>
 </html>
